[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://boogaloo-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://luckiest-guy-regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.1748
margin_top = -0.793701
margin_right = -3.1748
margin_bottom = -0.793701
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 72.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.427451, 0.737255, 0.67451, 1 )
text = "Converter    
 Hex  -  Bin  -  Float"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in" type="LineEdit" parent="."]
margin_left = 379.888
margin_top = 205.7
margin_right = 529.888
margin_bottom = 253.7
rect_min_size = Vector2( 150, 0 )
text = "0.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bt_convert" type="Button" parent="."]
margin_left = 565.888
margin_top = 200.7
margin_right = 725.888
margin_bottom = 252.7
text = "Convert"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_float2Hex" type="LineEdit" parent="."]
margin_left = 333.888
margin_top = 270.7
margin_right = 733.888
margin_bottom = 310.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_hex2bin" type="LineEdit" parent="."]
margin_left = 333.888
margin_top = 320.7
margin_right = 733.888
margin_bottom = 360.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_bin2hex" type="LineEdit" parent="."]
margin_left = 333.888
margin_top = 370.7
margin_right = 733.888
margin_bottom = 410.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_hex2float" type="LineEdit" parent="."]
margin_left = 333.888
margin_top = 420.7
margin_right = 733.888
margin_bottom = 460.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 265.779
margin_top = 212.894
margin_right = 389.779
margin_bottom = 241.894
custom_fonts/font = SubResource( 3 )
text = "Input float :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 201.605
margin_top = 283.864
margin_right = 325.605
margin_bottom = 297.864
text = "Hex :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 199.715
margin_top = 332.371
margin_right = 323.715
margin_bottom = 346.371
text = "Binary :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 199.455
margin_top = 382.657
margin_right = 323.455
margin_bottom = 396.657
text = "Hex :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 199.455
margin_top = 433.574
margin_right = 323.455
margin_bottom = 447.574
text = "Float :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="bt_convert" to="." method="_on_bt_convert_pressed"]
